change image size

--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
                 <img src="./images/b1.jpg" alt="">
                 <div class="content">
                     <div class="icons">
-                        <a href="#"><i class="fas fa-user">by user</i></a>
-                        <a href="#"><i class="fas fa-calendar">1st oct,2023</i></a><br />
+                        <a href="#"><i class="fas fa-user"></i> by user</a>
+                        <a href="#"><i class="fas fa-calendar"></i> 1st oct,2023</a>
                     </div>
                     <h3>fresh organic products</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing
@@ -365,8 +365,8 @@
                 <img src="./images/b2.jpg" alt="">
                 <div class="content">
                     <div class="icons">
-                        <a href="#"><i class="fas fa-user">by user</i></a>
-                        <a href="#"><i class="fas fa-calendar">1st may,2023</i></a><br />
+                        <a href="#"><i class="fas fa-user"></i> by user</a>
+                        <a href="#"><i class="fas fa-calendar"></i>1st oct,2023</a>
                     </div>
                     <h3>fresh organic products</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing
@@ -381,8 +381,8 @@
                 <img src="./images/b3.jpg" alt="">
                 <div class="content">
                     <div class="icons">
-                        <a href="#"><i class="fas fa-user">by user</i></a>
-                        <a href="#"><i class="fas fa-calendar">1st may,2023</i></a><br />
+                        <a href="#"><i class="fas fa-user"></i> by user</a>
+                        <a href="#"><i class="fas fa-calendar"></i>1st oct,2023</a>
                     </div>
                     <h3>fresh organic products</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing
@@ -397,8 +397,8 @@
                 <img src="./images/b4.jpg" alt="">
                 <div class="content">
                     <div class="icons">
-                        <a href="#"><i class="fas fa-user">by user</i></a>
-                        <a href="#"><i class="fas fa-calendar">1st may,2023</i></a><br />
+                        <a href="#"><i class="fas fa-user"></i> by user</a>
+                        <a href="#"><i class="fas fa-calendar"></i>1st oct,2023</a>
                     </div>
                     <h3>fresh organic products</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing
@@ -438,12 +438,12 @@
             </div>
             <div class="box">
                 <h3>Quick links</h3>
-                <a href="#" class="links"><i class="fas fa-arrow-right"></i>home</a>
-                <a href="#" class="links"><i class="fas fa-arrow-right"></i>features</a>
-                <a href="#" class="links"><i class="fas fa-arrow-right"></i>product</a>
-                <a href="#" class="links"><i class="fas fa-arrow-right"></i>categories</a>
-                <a href="#" class="links"><i class="fas fa-arrow-right"></i>review</a>
-                <a href="#" class="links"><i class="fas fa-arrow-right"></i>blogs</a>
+                <a href="#home" class="links"><i class="fas fa-arrow-right"></i>home</a>
+                <a href="#features" class="links"><i class="fas fa-arrow-right"></i>features</a>
+                <a href="#products" class="links"><i class="fas fa-arrow-right"></i>products</a>
+                <a href="#categories" class="links"><i class="fas fa-arrow-right"></i>categories</a>
+                <a href="#review" class="links"><i class="fas fa-arrow-right"></i>review</a>
+                <a href="#blogs" class="links"><i class="fas fa-arrow-right"></i>blogs</a>
             </div>
             <div class="box">
                 <h3>newsletter</h3>
